Add initial Rancher changes
This commit does a couple of minor changes:
- Modifies the README
- Modifies the module name
- Copies basic Rancher Drone / Dapper build stuff
- Removes the upstream build stuff

More details of changes are documented in the `RANCHER_CHANGELOG.md`.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-/.build/
-/.release/
-/.tarballs/
-/node_exporter*
-/prometheus*
-/data/
-/pushprox-client
-/pushprox-proxy
+/.dapper
+/.cache
+/bin
+/dist
+*.swp
+.idea
