Fix build scripts for PushProx
Need to support creating two images; one for the client and one for the
proxy. Was successfully able to create the images while using `make release`
using this setup.

```
arvindiyengar: ~/Rancher/PushProx/src/github.com/prometheus-community/PushProx
$ docker images
REPOSITORY                                  TAG                                              IMAGE ID            CREATED              SIZE
rancher/pushprox-client                     7b31a00-amd64                                    233e3bab7e55        8 seconds ago        16.5MB
rancher/pushprox-proxy                      7b31a00-amd64                                    9bcd3bd00033        9 seconds ago        16.6MB
```

--- a/scripts/build
+++ b/scripts/build
@@ -3,7 +3,8 @@ set -e
 
 source $(dirname $0)/version
 
-cd $(dirname $0)/..
+cd $(dirname $0)/../
+
 
 mkdir -p bin
 if [ "$(uname)" = "Linux" ]; then
@@ -11,8 +12,14 @@ if [ "$(uname)" = "Linux" ]; then
 fi
 LINKFLAGS="-X github.com/rancher/pushprox.Version=$VERSION"
 LINKFLAGS="-X github.com/rancher/pushprox.GitCommit=$COMMIT $LINKFLAGS"
-CGO_ENABLED=0 go build -ldflags "$LINKFLAGS $OTHER_LINKFLAGS" -o bin/pushprox
-if [ "$CROSS" = "true" ] && [ "$ARCH" = "amd64" ]; then
-    GOOS=darwin go build -ldflags "$LINKFLAGS" -o bin/pushprox-darwin
-    GOOS=windows go build -ldflags "$LINKFLAGS" -o bin/pushprox-windows
-fi
+
+for COMPONENT in proxy client
+do
+    pushd ./cmd/$COMPONENT
+    CGO_ENABLED=0 go build -ldflags "$LINKFLAGS $OTHER_LINKFLAGS" -o ../../bin/pushprox-${COMPONENT}
+    if [ "$CROSS" = "true" ] && [ "$ARCH" = "amd64" ]; then
+        GOOS=darwin go build -ldflags "$LINKFLAGS" -o ../../bin/pushprox-${COMPONENT}-darwin
+        GOOS=windows go build -ldflags "$LINKFLAGS" -o ../../bin/pushprox-${COMPONENT}-windows
+    fi
+    popd
+done
